force-app/main/default/objects/Integration_Event__e/Integration_Event__e.object-meta.xml
<CustomObject>
    <description>Real-time tracking + monitoring layer</description>
    <label>Integration Event</label>
    <pluralLabel>Integration Events</pluralLabel>
</CustomObject>