force-app/main/default/objects/Integration_Event__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Reference to Integration_Order__c</description>
    <label>Order Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>