force-app/main/default/objects/Integration_Event__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Event time</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>